// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas Block renders correctly 1`] = `
<Canvas
  className=""
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <div
    className="Canvas"
    onDragOver={[Function]}
    onDrop={[Function]}
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Draggable
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      key="test1"
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": 90,
          "y": 50,
        }
      }
      scale={1}
      transform={null}
    >
      <DraggableCore
        allowAnyClick={false}
        axis="both"
        bounds={false}
        cancel={null}
        defaultClassName="react-draggable"
        defaultClassNameDragged="react-draggable-dragged"
        defaultClassNameDragging="react-draggable-dragging"
        defaultPosition={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        disabled={false}
        enableUserSelectHack={true}
        grid={null}
        handle={null}
        offsetParent={null}
        onDrag={[Function]}
        onMouseDown={[Function]}
        onStart={[Function]}
        onStop={[Function]}
        position={
          Object {
            "x": 90,
            "y": 50,
          }
        }
        scale={1}
        transform={null}
      >
        <Block
          className="react-draggable"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "background": "#F96",
              "border": "1px solid #aaa",
              "borderRadius": "10px",
              "height": 80,
              "touchAction": "none",
              "transform": "translate(90px,50px)",
              "width": 100,
            }
          }
          transform={null}
        >
          <div
            className="Block react-draggable"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "background": "#F96",
                "border": "1px solid #aaa",
                "borderRadius": "10px",
                "height": 80,
                "touchAction": "none",
                "transform": "translate(90px,50px)",
                "width": 100,
              }
            }
            transform={null}
          />
        </Block>
      </DraggableCore>
    </Draggable>
    <Draggable
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      key="test2"
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": 20,
          "y": 150,
        }
      }
      scale={1}
      transform={null}
    >
      <DraggableCore
        allowAnyClick={false}
        axis="both"
        bounds={false}
        cancel={null}
        defaultClassName="react-draggable"
        defaultClassNameDragged="react-draggable-dragged"
        defaultClassNameDragging="react-draggable-dragging"
        defaultPosition={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        disabled={false}
        enableUserSelectHack={true}
        grid={null}
        handle={null}
        offsetParent={null}
        onDrag={[Function]}
        onMouseDown={[Function]}
        onStart={[Function]}
        onStop={[Function]}
        position={
          Object {
            "x": 20,
            "y": 150,
          }
        }
        scale={1}
        transform={null}
      >
        <Block
          className="react-draggable"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "background": "#F96",
              "border": "1px solid #aaa",
              "borderRadius": "10px",
              "height": 80,
              "touchAction": "none",
              "transform": "translate(20px,150px)",
              "width": 100,
            }
          }
          transform={null}
        >
          <div
            className="Block react-draggable"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "background": "#F96",
                "border": "1px solid #aaa",
                "borderRadius": "10px",
                "height": 80,
                "touchAction": "none",
                "transform": "translate(20px,150px)",
                "width": 100,
              }
            }
            transform={null}
          />
        </Block>
      </DraggableCore>
    </Draggable>
    <Draggable
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      key="test3"
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": 100,
          "y": 100,
        }
      }
      scale={1}
      transform={null}
    >
      <DraggableCore
        allowAnyClick={false}
        axis="both"
        bounds={false}
        cancel={null}
        defaultClassName="react-draggable"
        defaultClassNameDragged="react-draggable-dragged"
        defaultClassNameDragging="react-draggable-dragging"
        defaultPosition={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        disabled={false}
        enableUserSelectHack={true}
        grid={null}
        handle={null}
        offsetParent={null}
        onDrag={[Function]}
        onMouseDown={[Function]}
        onStart={[Function]}
        onStop={[Function]}
        position={
          Object {
            "x": 100,
            "y": 100,
          }
        }
        scale={1}
        transform={null}
      >
        <Block
          className="react-draggable"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "background": "#F96",
              "border": "1px solid #aaa",
              "borderRadius": "10px",
              "height": 80,
              "touchAction": "none",
              "transform": "translate(100px,100px)",
              "width": 100,
            }
          }
          transform={null}
        >
          <div
            className="Block react-draggable"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "background": "#F96",
                "border": "1px solid #aaa",
                "borderRadius": "10px",
                "height": 80,
                "touchAction": "none",
                "transform": "translate(100px,100px)",
                "width": 100,
              }
            }
            transform={null}
          />
        </Block>
      </DraggableCore>
    </Draggable>
  </div>
</Canvas>
`;

exports[`Canvas Canvas renders correctly 1`] = `
<Canvas
  className=""
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <div
    className="Canvas"
    onDragOver={[Function]}
    onDrop={[Function]}
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</Canvas>
`;

exports[`Canvas should not render redundant Line 1`] = `
<Canvas
  className=""
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <div
    className="Canvas"
    onDragOver={[Function]}
    onDrop={[Function]}
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Draggable
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      key="test1"
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": 90,
          "y": 50,
        }
      }
      scale={1}
      transform={null}
    >
      <DraggableCore
        allowAnyClick={false}
        axis="both"
        bounds={false}
        cancel={null}
        defaultClassName="react-draggable"
        defaultClassNameDragged="react-draggable-dragged"
        defaultClassNameDragging="react-draggable-dragging"
        defaultPosition={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        disabled={false}
        enableUserSelectHack={true}
        grid={null}
        handle={null}
        offsetParent={null}
        onDrag={[Function]}
        onMouseDown={[Function]}
        onStart={[Function]}
        onStop={[Function]}
        position={
          Object {
            "x": 90,
            "y": 50,
          }
        }
        scale={1}
        transform={null}
      >
        <Block
          className="react-draggable"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "background": "#F96",
              "border": "1px solid #aaa",
              "borderRadius": "10px",
              "height": 80,
              "touchAction": "none",
              "transform": "translate(90px,50px)",
              "width": 100,
            }
          }
          transform={null}
        >
          <div
            className="Block react-draggable"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "background": "#F96",
                "border": "1px solid #aaa",
                "borderRadius": "10px",
                "height": 80,
                "touchAction": "none",
                "transform": "translate(90px,50px)",
                "width": 100,
              }
            }
            transform={null}
          />
        </Block>
      </DraggableCore>
    </Draggable>
    <Draggable
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      key="test2"
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": 20,
          "y": 150,
        }
      }
      scale={1}
      transform={null}
    >
      <DraggableCore
        allowAnyClick={false}
        axis="both"
        bounds={false}
        cancel={null}
        defaultClassName="react-draggable"
        defaultClassNameDragged="react-draggable-dragged"
        defaultClassNameDragging="react-draggable-dragging"
        defaultPosition={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        disabled={false}
        enableUserSelectHack={true}
        grid={null}
        handle={null}
        offsetParent={null}
        onDrag={[Function]}
        onMouseDown={[Function]}
        onStart={[Function]}
        onStop={[Function]}
        position={
          Object {
            "x": 20,
            "y": 150,
          }
        }
        scale={1}
        transform={null}
      >
        <Block
          className="react-draggable"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "background": "#F96",
              "border": "1px solid #aaa",
              "borderRadius": "10px",
              "height": 80,
              "touchAction": "none",
              "transform": "translate(20px,150px)",
              "width": 100,
            }
          }
          transform={null}
        >
          <div
            className="Block react-draggable"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "background": "#F96",
                "border": "1px solid #aaa",
                "borderRadius": "10px",
                "height": 80,
                "touchAction": "none",
                "transform": "translate(20px,150px)",
                "width": 100,
              }
            }
            transform={null}
          />
        </Block>
      </DraggableCore>
    </Draggable>
    <Draggable
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      key="test3"
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": 100,
          "y": 100,
        }
      }
      scale={1}
      transform={null}
    >
      <DraggableCore
        allowAnyClick={false}
        axis="both"
        bounds={false}
        cancel={null}
        defaultClassName="react-draggable"
        defaultClassNameDragged="react-draggable-dragged"
        defaultClassNameDragging="react-draggable-dragging"
        defaultPosition={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        disabled={false}
        enableUserSelectHack={true}
        grid={null}
        handle={null}
        offsetParent={null}
        onDrag={[Function]}
        onMouseDown={[Function]}
        onStart={[Function]}
        onStop={[Function]}
        position={
          Object {
            "x": 100,
            "y": 100,
          }
        }
        scale={1}
        transform={null}
      >
        <Block
          className="react-draggable"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "background": "#F96",
              "border": "1px solid #aaa",
              "borderRadius": "10px",
              "height": 80,
              "touchAction": "none",
              "transform": "translate(100px,100px)",
              "width": 100,
            }
          }
          transform={null}
        >
          <div
            className="Block react-draggable"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "background": "#F96",
                "border": "1px solid #aaa",
                "borderRadius": "10px",
                "height": 80,
                "touchAction": "none",
                "transform": "translate(100px,100px)",
                "width": 100,
              }
            }
            transform={null}
          />
        </Block>
      </DraggableCore>
    </Draggable>
    <SteppedLineTo
      className=""
      from={
        <div
          class="Block react-draggable"
          style="width: 100px; height: 80px; background: rgb(255, 153, 102); border-radius: 10px; border: 1px solid #aaa; transform: translate(90px,50px);"
        />
      }
      fromAnchor="bottom"
      key="line-927681"
      style={Object {}}
      to={
        <div
          class="Block react-draggable"
          style="width: 100px; height: 80px; background: rgb(255, 153, 102); border-radius: 10px; border: 1px solid #aaa; transform: translate(20px,150px);"
        />
      }
      toAnchor="top"
    >
      <div
        className="stepped-line-to"
      >
        <SteppedLine
          className=""
          from={
            <div
              class="Block react-draggable"
              style="width: 100px; height: 80px; background: rgb(255, 153, 102); border-radius: 10px; border: 1px solid #aaa; transform: translate(90px,50px);"
            />
          }
          orientation="v"
          style={Object {}}
          to={
            <div
              class="Block react-draggable"
              style="width: 100px; height: 80px; background: rgb(255, 153, 102); border-radius: 10px; border: 1px solid #aaa; transform: translate(20px,150px);"
            />
          }
          x0={0}
          x1={0}
          y0={0}
          y1={0}
        >
          <Line
            className=""
            from={
              <div
                class="Block react-draggable"
                style="width: 100px; height: 80px; background: rgb(255, 153, 102); border-radius: 10px; border: 1px solid #aaa; transform: translate(90px,50px);"
              />
            }
            orientation="v"
            style={Object {}}
            to={
              <div
                class="Block react-draggable"
                style="width: 100px; height: 80px; background: rgb(255, 153, 102); border-radius: 10px; border: 1px solid #aaa; transform: translate(20px,150px);"
              />
            }
            x0={0}
            x1={0}
            y0={0}
            y1={0}
          >
            <div
              className="line-placeholder"
            >
              <div
                className=""
                from={
                  <div
                    class="Block react-draggable"
                    style="width: 100px; height: 80px; background: rgb(255, 153, 102); border-radius: 10px; border: 1px solid #aaa; transform: translate(90px,50px);"
                  />
                }
                orientation="v"
                style={
                  Object {
                    "borderTopColor": "#ddd",
                    "borderTopStyle": "solid",
                    "borderTopWidth": 1,
                    "left": "0px",
                    "position": "absolute",
                    "top": "0px",
                    "transform": "rotate(0deg)",
                    "transformOrigin": "0 0",
                    "width": "0px",
                    "zIndex": "1",
                  }
                }
                to={
                  <div
                    class="Block react-draggable"
                    style="width: 100px; height: 80px; background: rgb(255, 153, 102); border-radius: 10px; border: 1px solid #aaa; transform: translate(20px,150px);"
                  />
                }
              />
            </div>
          </Line>
        </SteppedLine>
      </div>
    </SteppedLineTo>
  </div>
</Canvas>
`;
